--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
      <!-- Contenido principal -->
     <main id="main" class="main">      
         <div class="intro">
-            <img src="image/logoAbeja.jpg" alt="fotoPrincipal" width="140" class="fotoPrincipal">
+            <img src="image/fotoPersonal.jpg" alt="fotoPrincipal" width="140" class="fotoPrincipal">
             <div class="text-container">
                 <h1 class="title">
                     Buenas, soy<br>María Sol Alcaraz
