--- a/index.html
+++ b/index.html
@@ -18,17 +18,19 @@
 
 <body>
     <!-- Titulo y menu de la web -->
-     <header class="header">
+    <header class="header">
         <nav class="navbar">
             <a href="#" class="nav-logo">
                 <img src="image/logo.png" alt="logo" width="30">
                 <span>María Sol</span>
             </a>
-            <ul class="nav-list">
-                <li><a href="#about" class="nav-link"> Sobre mí </a></li>
-                <li><a href="#projects" class="nav-link"> Proyectos </a></li>
-                <li><a href="#contact" class="nav-link"> Contacto </a></li>
-            </ul>
+            <div class="sidebar_nav">
+                <ul class="nav-list">
+                    <li><a href="#about" class="nav-link"> Sobre mí </a></li>
+                    <li><a href="#projects" class="nav-link"> Proyectos </a></li>
+                    <li><a href="#contact" class="nav-link"> Contacto </a></li>
+                </ul>
+            </div>
         </nav>
      </header>
      
